<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafaff"
    android:fitsSystemWindows="true"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_parking_lot_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_parking_lot_list"
        tools:context=".Home">

        <RelativeLayout
            android:id="@+id/rl_nav_menu_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="180dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_account_settings"
                style="@style/nav_drawer_menu_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:drawableStart="@drawable/ic_vehicle"
                android:drawablePadding="22dp"
                android:text="@string/my_account"
                android:drawableLeft="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/tv_parking_history"
                style="@style/nav_drawer_menu_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_account_settings"
                android:drawableStart="@drawable/ic_edit"
                android:drawablePadding="22dp"
                android:text="@string/history"
                android:drawableLeft="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/tv_payment"
                style="@style/nav_drawer_menu_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_parking_history"
                android:drawableStart="@drawable/ic_location"
                android:drawablePadding="22dp"
                android:text="@string/payment"
                android:drawableLeft="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/tv_help"
                style="@style/nav_drawer_menu_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_payment"
                android:drawableStart="@drawable/ic_action_locations"
                android:drawablePadding="22dp"
                android:text="@string/help"
                android:drawableLeft="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/tv_legal"
                style="@style/nav_drawer_menu_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_help"
                android:layout_alignParentBottom="true"
                android:paddingBottom="10dp"
                android:text="@string/legal" />

        </RelativeLayout>
    </com.google.android.material.navigation.NavigationView>



    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerView">

    </androidx.recyclerview.widget.RecyclerView>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:menu="@menu/navigationmenus" />

</RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>
